fixed issue with padding of content in the post-footer class. Added html meta tag for better visiblity in mobile browsers.

--- a/index.css
+++ b/index.css
@@ -34,12 +34,14 @@ header img {
     align-items: center;
     display: flex;
     justify-content: space-between;
-    width: 320px;
+    max-width: 800px;
     margin: 0 auto;
     padding: 0;
     border-bottom: 20px solid #EDEDED;
 }
-
+.post {
+    width: 100%;
+}
 .post-heading {
     display: flex;
     border-radius: 50%;
@@ -74,6 +76,8 @@ header img {
 .post-footer {
     margin-top: 10px;
     width: inherit;
+    box-sizing: border-box;
+    padding-left: 10px;
 }
 
 .interactions-container {
